--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Ab4d.SharpEngine.Samples.BlazorWebAssembly.csproj
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Ab4d.SharpEngine.Samples.BlazorWebAssembly.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -39,13 +39,15 @@
   </PropertyGroup>
 
 
-  <!--<ItemGroup Condition="$(SHARPENGINE_PRIVATE_DIR)==''">
-    <PackageReference Include="Ab4d.SharpEngine.Web" Version="0.8.9386-beta1" />
-  </ItemGroup>-->
+  <ItemGroup Condition="$(SHARPENGINE_PRIVATE_DIR)==''">
+    <PackageReference Include="Ab4d.SharpEngine.Web" Version="0.8.9398-beta1" />
+  </ItemGroup>
   <ItemGroup Condition="$(SHARPENGINE_PRIVATE_DIR)!=''">
     <ProjectReference Include="$(SHARPENGINE_PRIVATE_DIR)\Ab4d.SharpEngine.Web\Ab4d.SharpEngine.Web.csproj" />
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Silk.NET.OpenGLES" Version="2.22.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <!--The following NativeFileReference is required for Ab4d.SharpEngine.Web to use WebGL from the browser -->
