Improved Asp.Net Core and Simple Web Page projects

--- a/.gitignore
+++ b/.gitignore
@@ -259,4 +259,5 @@ paket-files/
 
 
 # Prevent commiting files that are copied from compiled _framework folder
-*_framework/
+Ab4d.SharpEngine.Samples.HtmlWebPage/_framework/
+Ab4d.SharpEngine.Samples.HtmlWebPage/wwwroot/
