Improved NoBlazor solution. Added and improved readme text

--- a/.gitignore
+++ b/.gitignore
@@ -259,5 +259,6 @@ paket-files/
 
 
 # Prevent commiting files that are copied from compiled _framework folder
+Ab4d.SharpEngine.Samples.AspNetCoreApp/wwwroot/_framework/
 Ab4d.SharpEngine.Samples.HtmlWebPage/_framework/
 Ab4d.SharpEngine.Samples.HtmlWebPage/wwwroot/
