Added UIProvider that can render UI for common samples

--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Ab4d.SharpEngine.Samples.BlazorWebAssembly.csproj
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Ab4d.SharpEngine.Samples.BlazorWebAssembly.csproj
@@ -39,11 +39,14 @@
     <WasmNativeStrip>true</WasmNativeStrip>
   </PropertyGroup>
 
-
+<!--  <ItemGroup>-->
+<!--    <PackageReference Include="Ab4d.SharpEngine.Web" Version="0.8.9432-beta2" />-->
+<!--  </ItemGroup>-->
+<!--
   <ItemGroup Condition="$(SHARPENGINE_PRIVATE_DIR)==''">
     <PackageReference Include="Ab4d.SharpEngine.Web" Version="0.8.9432-beta2" />
   </ItemGroup>
-
+-->
   <ItemGroup Condition="$(SHARPENGINE_PRIVATE_DIR)!=''">
     <ProjectReference Include="$(SHARPENGINE_PRIVATE_DIR)\Ab4d.SharpEngine.Web\Ab4d.SharpEngine.Web.csproj" />
   </ItemGroup>
