--- a/Ab4d.SharpEngine.Samples.BlazorWebAssemblyTesterApp/Ab4d.SharpEngine.Samples.BlazorWebAssemblyTesterApp.private.csproj
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssemblyTesterApp/Ab4d.SharpEngine.Samples.BlazorWebAssemblyTesterApp.private.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ab4d.SharpEngine.Web" Version="0.8.9432-beta2" />
+    <ProjectReference Include="$(SHARPENGINE_PRIVATE_DIR)\Ab4d.SharpEngine.Web\Ab4d.SharpEngine.Web.csproj" />
   </ItemGroup>
 
   <ItemGroup>
