--- a/Ab4d.SharpEngine.Samples.BlazorWebAssemblyTesterApp/Ab4d.SharpEngine.Samples.BlazorWebAssemblyTesterApp.csproj
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssemblyTesterApp/Ab4d.SharpEngine.Samples.BlazorWebAssemblyTesterApp.csproj
@@ -25,12 +25,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.9" PrivateAssets="all" />
   </ItemGroup>
 
-  <ItemGroup Condition="$(SHARPENGINE_PRIVATE_DIR)==''">
+  <ItemGroup>
     <PackageReference Include="Ab4d.SharpEngine.Web" Version="0.8.9432-beta2" />
-  </ItemGroup>
-
-  <ItemGroup Condition="$(SHARPENGINE_PRIVATE_DIR)!=''">
-    <ProjectReference Include="$(SHARPENGINE_PRIVATE_DIR)\Ab4d.SharpEngine.Web\Ab4d.SharpEngine.Web.csproj" />
   </ItemGroup>
 
   <ItemGroup>
