--- a/Ab4d.SharpEngine.Samples.WebAssemblyDemo/Ab4d.SharpEngine.Samples.WebAssemblyDemo.csproj
+++ b/Ab4d.SharpEngine.Samples.WebAssemblyDemo/Ab4d.SharpEngine.Samples.WebAssemblyDemo.csproj
@@ -38,12 +38,8 @@
     <NativeFileReference Include="Native/libEGL.c" ScanForPInvokes="true" />
   </ItemGroup>
 
-  <ItemGroup Condition="$(SHARPENGINE_PRIVATE_DIR)==''">
+  <ItemGroup>
     <PackageReference Include="Ab4d.SharpEngine.Web" Version="0.8.9432-beta2" />
-  </ItemGroup>
-
-  <ItemGroup Condition="$(SHARPENGINE_PRIVATE_DIR)!=''">
-    <ProjectReference Include="$(SHARPENGINE_PRIVATE_DIR)\Ab4d.SharpEngine.Web\Ab4d.SharpEngine.Web.csproj" />
   </ItemGroup>
 
 </Project>
