Added creating menu from Samples.xml

--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Ab4d.SharpEngine.Samples.BlazorWebAssembly.private.csproj
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Ab4d.SharpEngine.Samples.BlazorWebAssembly.private.csproj
@@ -42,6 +42,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\Samples.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="$(SHARPENGINE_PRIVATE_DIR)\Ab4d.SharpEngine.Web\Ab4d.SharpEngine.Web.csproj" />
     <ProjectReference Include="..\Ab4d.SharpEngine.Samples.Common.Blazor\Ab4d.SharpEngine.Samples.Common.Blazor.csproj" />
   </ItemGroup>
@@ -63,6 +67,10 @@
 
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Samples.xml" />
   </ItemGroup>
 
 </Project>
