Added new Camera samples

--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Ab4d.SharpEngine.Samples.BlazorWebAssembly.private.csproj
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Ab4d.SharpEngine.Samples.BlazorWebAssembly.private.csproj
@@ -42,10 +42,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="wwwroot\Samples.xml" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="$(SHARPENGINE_PRIVATE_DIR)\Ab4d.SharpEngine.Web\Ab4d.SharpEngine.Web.csproj" />
     <ProjectReference Include="..\Ab4d.SharpEngine.Samples.Common.Blazor\Ab4d.SharpEngine.Samples.Common.Blazor.csproj" />
   </ItemGroup>
@@ -70,7 +66,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\Samples.xml" />
+    <Folder Include="wwwroot\models\" />
   </ItemGroup>
 
 </Project>
