Added other AdvancedModels samples

--- a/Ab4d.SharpEngine.Samples.Common.Blazor/Ab4d.SharpEngine.Samples.Common.Blazor.csproj
+++ b/Ab4d.SharpEngine.Samples.Common.Blazor/Ab4d.SharpEngine.Samples.Common.Blazor.csproj
@@ -18,20 +18,32 @@
   <ItemGroup>
     <Folder Include="AdvancedModels\" />
     <Folder Include="Cameras\" />
+    <Folder Include="Utils\" />
     <Folder Include="StandardModels\" />
   </ItemGroup>
 
   <ItemGroup>
     <Compile Include="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\StandardModels\*" LinkBase="StandardModels\" />
+
     <Compile Include="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\Cameras\*" LinkBase="Cameras\" />
     <Compile Remove="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\Cameras\CameraAxisPanelSample.cs" />
     <Compile Remove="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\Cameras\TwoDimensionalCamera.cs" />
     <Compile Remove="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\Cameras\TwoDimensionalCameraSample.cs" />
+
+    <Compile Include="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\AdvancedModels\*" LinkBase="AdvancedModels\" />
+    <Compile Remove="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\AdvancedModels\AdvancedHeightMapSample.cs" />
+    <Compile Remove="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\AdvancedModels\SimpleHeightMapSample.cs" />
+    <Compile Remove="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\AdvancedModels\MultiMaterialModelNodeSample.cs" />
+    <Compile Remove="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\AdvancedModels\PixelOptionsSample.cs" />
+    <Compile Remove="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\AdvancedModels\PixelsRenderingSample.cs" />
+    <Compile Remove="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\AdvancedModels\SkyboxSample.cs" />
+    <Compile Remove="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\AdvancedModels\SpritesSample.cs" />
+    <Compile Remove="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\AdvancedModels\VolumeRenderingSample.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\AdvancedModels\InstancedArrowsSample.cs" Link="AdvancedModels\InstancedArrowsSample.cs" />
-    <Compile Include="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\AdvancedModels\InstancedMeshNodeSample.cs" Link="AdvancedModels\InstancedMeshNodeSample.cs" />
+    <!--<Compile Include="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\AdvancedModels\InstancedArrowsSample.cs" Link="AdvancedModels\InstancedArrowsSample.cs" />
+    <Compile Include="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\AdvancedModels\InstancedMeshNodeSample.cs" Link="AdvancedModels\InstancedMeshNodeSample.cs" />-->
     <Compile Include="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\CommonSample.cs" Link="CommonSample.cs" />
     <Compile Include="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\CommonSamplesContext.cs" Link="CommonSamplesContext.cs" />
     <Compile Include="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\ICommonSamplesContext.cs" Link="ICommonSamplesContext.cs" />
@@ -40,6 +52,7 @@
     <Compile Include="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\ICommonSampleUIProvider.cs" Link="ICommonSampleUIProvider.cs" />
     <Compile Include="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\SamplesXmlReader.cs" Link="SamplesXmlReader.cs" />
     <Compile Include="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\TestScenes.cs" Link="TestScenes.cs" />
+    <Compile Include="..\..\Ab4d.SharpEngine.Samples\Ab4d.SharpEngine.Samples.Common\Utils\CsvDataReader.cs" Link="Utils\CsvDataReader.cs" />
   </ItemGroup>
 
   <!--<ItemGroup>
