Using Ab4d.SharpEngine.Web v0.8.9525 This vesion has exteded expiration date (until 2026-04-30).

--- a/Ab4d.SharpEngine.Samples.WebAssemblyDemo/Ab4d.SharpEngine.Samples.WebAssemblyDemo.csproj
+++ b/Ab4d.SharpEngine.Samples.WebAssemblyDemo/Ab4d.SharpEngine.Samples.WebAssemblyDemo.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0-browser</TargetFramework>
@@ -39,7 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ab4d.SharpEngine.Web" Version="0.8.9432-beta2" />
+    <PackageReference Include="Ab4d.SharpEngine.Web" Version="0.8.9525-beta2" />
   </ItemGroup>
 
 </Project>
