Updated to run in a subfolder

--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Properties/launchSettings.json
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Properties/launchSettings.json
@@ -10,6 +10,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+      //,"commandLineArgs": "--pathbase=/sharp-engine-browser-demo",
+      //"launchUrl": "sharp-engine-browser-demo"
     },
     "https": {
       "commandName": "Project",
@@ -20,6 +22,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+      //,"commandLineArgs": "--pathbase=/sharp-engine-browser-demo",
+      //"launchUrl": "sharp-engine-browser-demo"
     },
     "PlaywrightTests": {
       "commandName": "Project",
@@ -30,6 +34,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+      //,"commandLineArgs": "--pathbase=/sharp-engine-browser-demo",
+      //"launchUrl": "sharp-engine-browser-demo"
     }
   }
 }
