--- a/Ab4d.SharpEngine.Samples.BlazorWebAssemblyTesterApp/Ab4d.SharpEngine.Samples.BlazorWebAssemblyTesterApp.csproj
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssemblyTesterApp/Ab4d.SharpEngine.Samples.BlazorWebAssemblyTesterApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
@@ -26,17 +26,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ab4d.SharpEngine.Web" Version="0.9.9541-rc1" />
+    <PackageReference Include="Ab4d.SharpEngine.Web" Version="0.9.9543-rc1" />
   </ItemGroup>
 
   <ItemGroup>
     <!--The following NativeFileReference is required for Ab4d.SharpEngine.Web to use WebGL from the browser -->
     <NativeFileReference Include="Native/libEGL.c" ScanForPInvokes="true" />
   </ItemGroup>
-
-  <!--<ItemGroup>
-    <ProjectReference Include="..\..\..\My\Ab4d\SharpEngine\Ab4d.SharpEngine.Web\Ab4d.SharpEngine.Web.csproj" />
-  </ItemGroup>-->
 
   <ItemGroup>
     <!--The following javascript file is required for CanvasInterop class to be able to communicate with the browser -->
